test/Fail/UnquoteSpeculativeNonPair.err
UnquoteSpeculativeNonPair.agda:10.1-13.34: error: [UserError]
Should be a pair:  foo
